Lowered altitude and turned Wheels on

--- a/drone.conf
+++ b/drone.conf
@@ -1,7 +1,7 @@
 [drone]
 
 ; meter - min: 2, max: 10
-max_altitude = 5
+max_altitude = 2
 
 ; meter/sec - min: 0.5, max: 2.5
 max_vertical_speed = 1
@@ -13,7 +13,7 @@ max_tilt = 15
 max_rotation_speed = 150
 
 ; boolean
-wheels = False
+wheels = True
 
 ; boolean
 cutoff = True
